tests/files/type_checker_tests/should_pass/074.cmdr
//Test that pre-increment operations type check
a = [2, 3, 4];
x = 1;
y = ++a[x];
