tests/files/type_checker_tests/should_fail/102.cmdr
//Should fail pre-increment on something of incorrect type
a = [true, false, true];
++a[1];
